[project]
name = "june"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt>=0.26.19",
    "dagster-webserver>=1.10.19",
    "pandas>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "june.definitions"
code_location_name = "june"

[tool.setuptools.packages.find]
exclude=["june_tests"]
